--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </article>
       </div>
     </section>
-  <section class="contacto">
+  <section id="contacto" class="contactoo">
         
     <div class="content">
 
