--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <div class="contact-wrapper animated bounceInUp">
           <div class="contact-form">
-              <h3>Contact us</h3>
+              <h3>Contact Me</h3>
               <form action="" method="POST" data-netlify="true" name="contact" target="_blank">
                   <p>
                       <label>FullName</label>
